@@ -24,6 +24,7 @@ import java.time.Clock;
 import java.time.LocalDateTime;
 import java.util.List;
 
+import static org.assertj.core.api.Assertions.*;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.*;
@@ -61,16 +62,17 @@ class VoteServiceTest extends IntegrationTest {
                                         .build())
                         .build()
         );
+        Long pollChoiceId = post.getPollChoices().getFirst().getId();
 
         // when
-        Long voteId = voteService.vote(user.getId(), post.getId(), post.getPollChoices().get(0).getId());
+        List<Long> voteIds = voteService.vote(user.getId(), post.getId(), List.of(pollChoiceId));
 
         // then
-        Vote vote = voteRepository.findById(voteId).get();
+        Vote vote = voteRepository.findById(voteIds.getFirst()).orElseThrow();
         assertAll(
                 () -> assertThat(vote.getUserId()).isEqualTo(user.getId()),
                 () -> assertThat(vote.getPostId()).isEqualTo(post.getId()),
-                () -> assertThat(vote.getPollChoiceId()).isEqualTo(post.getPollChoices().get(0).getId()),
+                () -> assertThat(vote.getPollChoiceId()).isEqualTo(pollChoiceId),
                 () -> verify(eventPublisher, times(1)).publish(any(VotedEvent.class))
         );
     }
@@ -93,16 +95,37 @@ class VoteServiceTest extends IntegrationTest {
         voteRepository.save(VoteFixture.createDefaultVote(user.getId(), post.getId(), before));
 
         // when
-        Long voteId = voteService.vote(user.getId(), post.getId(), after);
+        List<Long> voteIds = voteService.vote(user.getId(), post.getId(), List.of(after));
 
         // then
-        Vote vote = voteRepository.findById(voteId).get();
+        Vote vote = voteRepository.findById(voteIds.get(1)).orElseThrow();
         assertThat(vote.getPollChoiceId()).isEqualTo(after);
     }
 
     @Test
-    @DisplayName("복수 투표하기")
-    void multipleVote() {
+    @DisplayName("단일 투표 - 빈 배열로 투표 시 기존 투표 취소")
+    void singleVote_cancelByEmptyChoice() {
+        // given
+        User user = userRepository.save(UserFixture.createDefaultUser());
+        Post post = postRepository.save(
+                PostFixture.createPostBuilder()
+                        .pollOption(PostFixture.createPollOptionBuilder().pollType(PollType.SINGLE).build())
+                        .build()
+        );
+        Long pollChoiceId = post.getPollChoices().getFirst().getId();
+        voteService.vote(user.getId(), post.getId(), List.of(pollChoiceId));
+
+        // when
+        voteService.vote(user.getId(), post.getId(), List.of());
+
+        // then
+        List<Vote> votes = voteRepository.findByUserIdAndPostId(user.getId(), post.getId());
+        assertThat(votes).isEmpty();
+    }
+
+    @Test
+    @DisplayName("복수 투표하기 - 여러 선택지 한 번에")
+    void multipleVote_atOnce() {
         // given
         User user = userRepository.save(UserFixture.createDefaultUser());
         Post post = postRepository.save(
@@ -114,25 +137,51 @@ class VoteServiceTest extends IntegrationTest {
                         .build()
         );
         List<PollChoice> pollChoices = post.getPollChoices();
-        Long first = pollChoices.get(0).getId();
-        Long second = pollChoices.get(1).getId();
+        List<Long> choiceIds = List.of(pollChoices.get(0).getId(), pollChoices.get(1).getId());
 
         // when
-        Long voteId1 = voteService.vote(user.getId(), post.getId(), first);
-        Long voteId2 = voteService.vote(user.getId(), post.getId(), second);
+        List<Long> voteIds = voteService.vote(user.getId(), post.getId(), choiceIds);
 
         // then
-        Vote vote1 = voteRepository.findById(voteId1).get();
-        Vote vote2 = voteRepository.findById(voteId2).get();
-        assertAll(
-                () -> assertThat(vote1.getUserId()).isEqualTo(user.getId()),
-                () -> assertThat(vote1.getPostId()).isEqualTo(post.getId()),
-                () -> assertThat(vote1.getPollChoiceId()).isEqualTo(first),
+        List<Vote> votes = voteRepository.findAllByPostId(post.getId());
+        assertThat(votes).hasSize(2);
+        assertThat(votes).allMatch(v -> v.getUserId().equals(user.getId()));
+        assertThat(votes).extracting(Vote::getPollChoiceId)
+                .containsExactlyInAnyOrderElementsOf(choiceIds);
+    }
 
-                () -> assertThat(vote2.getUserId()).isEqualTo(user.getId()),
-                () -> assertThat(vote2.getPostId()).isEqualTo(post.getId()),
-                () -> assertThat(vote2.getPollChoiceId()).isEqualTo(second)
+    @Test
+    @DisplayName("복수 투표 - 기존 투표와 다른 선택지로 변경")
+    void multipleVote_changeChoices() {
+        // given
+        User user = userRepository.save(UserFixture.createDefaultUser());
+        Post post = postRepository.save(
+                PostFixture.createPostBuilder()
+                        .pollChoices(List.of(
+                                PostFixture.createPollChoice(),
+                                PostFixture.createPollChoice(),
+                                PostFixture.createPollChoice())
+                        )
+                        .pollOption(PostFixture.createPollOptionBuilder()
+                                .pollType(PollType.MULTIPLE)
+                                .build())
+                        .build()
         );
+        List<PollChoice> pollChoices = post.getPollChoices();
+        Long first = pollChoices.get(0).getId();
+        Long second = pollChoices.get(1).getId();
+        Long third = pollChoices.get(2).getId();
+        voteService.vote(user.getId(), post.getId(), List.of(first, second));
+
+        // when
+        List<Long> voteIds = voteService.vote(user.getId(), post.getId(), List.of(second, third));
+
+        // then
+        List<Vote> votes = voteRepository.findAllByPostId(post.getId());
+        assertThat(votes).hasSize(2);
+        assertThat(votes).allMatch(v -> v.getUserId().equals(user.getId()));
+        assertThat(votes).extracting(Vote::getPollChoiceId)
+                .containsExactlyInAnyOrder(second, third);
     }
 
     @Test
@@ -145,9 +194,10 @@ class VoteServiceTest extends IntegrationTest {
                         .status(Status.CLOSED)
                         .build()
         );
+        Long pollChoiceId = post.getPollChoices().getFirst().getId();
 
-        // when
-        assertThatThrownBy(() -> voteService.vote(user.getId(), post.getId(), post.getPollChoices().get(0).getId()))
+        // when & then
+        assertThatThrownBy(() -> voteService.vote(user.getId(), post.getId(), List.of(pollChoiceId)))
                 .isInstanceOf(BadRequestException.class)
                 .hasMessage(ErrorCode.POST_ALREADY_CLOSED.getMessage());
     }
@@ -166,28 +216,79 @@ class VoteServiceTest extends IntegrationTest {
                                         .build())
                         .build()
         );
+        Long pollChoiceId = post.getPollChoices().getFirst().getId();
+        voteRepository.save(VoteFixture.createDefaultVote(user.getId(), post.getId(), pollChoiceId));
 
-        // when
-        assertThatThrownBy(() -> voteService.vote(user.getId(), post.getId(), post.getPollChoices().get(0).getId()))
+        // when & then
+        assertThatThrownBy(() -> voteService.vote(user.getId(), post.getId(), List.of(pollChoiceId)))
                 .isInstanceOf(BadRequestException.class)
                 .hasMessage(ErrorCode.EXCEED_MAX_VOTER_COUNT.getMessage());
     }
 
     @Test
-    @DisplayName("투표하기 - 마감 시간 지난 경우")
-    void vote_afterCloseDate() {
+    @DisplayName("단일 투표 - 선택지가 여러 개 들어온 경우 예외")
+    void singleVote_multipleChoicesException() {
         // given
         User user = userRepository.save(UserFixture.createDefaultUser());
         Post post = postRepository.save(
                 PostFixture.createPostBuilder()
-                        .closeOption(PostFixture.createCloseOptionOverDate())
+                        .pollOption(
+                                PostFixture.createPollOptionBuilder()
+                                        .pollType(PollType.SINGLE)
+                                        .build())
                         .build()
         );
+        List<Long> pollChoiceIds = post.getPollChoices().stream().map(PollChoice::getId).toList();
+
+        // when & then
+        assertThatThrownBy(() -> voteService.vote(user.getId(), post.getId(), pollChoiceIds))
+                .isInstanceOf(BadRequestException.class)
+                .hasMessage(ErrorCode.SINGLE_POLL_ALLOWS_MAXIMUM_ONE_CHOICE.getMessage());
+    }
+
+    @Test
+    @DisplayName("복수 투표 - 중복된 선택지가 들어온 경우 예외")
+    void multipleVote_duplicateChoicesException() {
+        // given
+        User user = userRepository.save(UserFixture.createDefaultUser());
+        Post post = postRepository.save(
+                PostFixture.createPostBuilder()
+                        .pollOption(
+                                PostFixture.createPollOptionBuilder()
+                                        .pollType(PollType.MULTIPLE)
+                                        .build())
+                        .build()
+        );
+        Long pollChoiceId = post.getPollChoices().getFirst().getId();
+        List<Long> pollChoiceIds = List.of(pollChoiceId, pollChoiceId); // 중복
+
+        // when & then
+        assertThatThrownBy(() -> voteService.vote(user.getId(), post.getId(), pollChoiceIds))
+                .isInstanceOf(BadRequestException.class)
+                .hasMessage(ErrorCode.DUPLICATE_POLL_CHOICE.getMessage());
+    }
+
+    @Test
+    @DisplayName("복수 투표 - 모든 선택지 제외 시 전체 투표 취소")
+    void multipleVote_cancelAllChoices() {
+        // given
+        User user = userRepository.save(UserFixture.createDefaultUser());
+        Post post = postRepository.save(
+                PostFixture.createPostBuilder()
+                        .pollOption(PostFixture.createPollOptionBuilder().pollType(PollType.MULTIPLE).build())
+                        .build()
+        );
+        List<PollChoice> pollChoices = post.getPollChoices();
+        Long first = pollChoices.get(0).getId();
+        Long second = pollChoices.get(1).getId();
+        voteService.vote(user.getId(), post.getId(), List.of(first, second));
 
         // when
-        assertThatThrownBy(() -> voteService.vote(user.getId(), post.getId(), post.getPollChoices().get(0).getId()))
-                .isInstanceOf(BadRequestException.class)
-                .hasMessage(ErrorCode.CLOSE_DATE_OVER.getMessage());
+        voteService.vote(user.getId(), post.getId(), List.of());
+
+        // then
+        List<Vote> votes = voteRepository.findByUserIdAndPostId(user.getId(), post.getId());
+        assertThat(votes).isEmpty();
     }
 
     @Test
@@ -196,7 +297,9 @@ class VoteServiceTest extends IntegrationTest {
         // given
         User user = userRepository.save(UserFixture.createDefaultUser());
         Post post = postRepository.save(PostFixture.createDefaultPost(user.getId()));
-        Long voteId = voteService.vote(user.getId(), post.getId(), post.getPollChoices().get(0).getId());
+        Long pollChoiceId = post.getPollChoices().getFirst().getId();
+        List<Long> voteIds = voteService.vote(user.getId(), post.getId(), List.of(pollChoiceId));
+        Long voteId = voteIds.getFirst();
 
         // when
         voteService.cancelVote(user.getId(), voteId);
@@ -212,7 +315,9 @@ class VoteServiceTest extends IntegrationTest {
         // given
         User user = userRepository.save(UserFixture.createDefaultUser());
         Post post = postRepository.save(PostFixture.createDefaultPost(user.getId()));
-        Long voteId = voteService.vote(user.getId(), post.getId(), post.getPollChoices().get(0).getId());
+        Long pollChoiceId = post.getPollChoices().getFirst().getId();
+        List<Long> voteIds = voteService.vote(user.getId(), post.getId(), List.of(pollChoiceId));
+        Long voteId = voteIds.getFirst();
 
         // when then
         assertThatThrownBy(() -> voteService.cancelVote(2L, voteId))
@@ -222,12 +327,12 @@ class VoteServiceTest extends IntegrationTest {
 
     @Test
     @DisplayName("투표 현황 조회")
-    void findVoteStatus() throws Exception {
+    void findVoteStatus() {
         //given
         User user = userRepository.save(UserFixture.createDefaultUser());
         Post post = postRepository.save(PostFixture.createDefaultPost(user.getId()));
         int voteIndex = 1;
-        Vote vote = voteRepository.save(VoteFixture.createDefaultVote(user.getId(), post.getId(), post.getPollChoices().get(voteIndex).getId()));
+        voteRepository.save(VoteFixture.createDefaultVote(user.getId(), post.getId(), post.getPollChoices().get(voteIndex).getId()));
 
         //when
         var response = voteService.findVoteStatus(user.getId(), post.getId());
@@ -235,13 +340,13 @@ class VoteServiceTest extends IntegrationTest {
         //then
         assertAll(
                 () -> assertThat(response).hasSize(2),
-                () -> assertThat(response.get(0).id()).isEqualTo(post.getPollChoices().get(voteIndex).getId()),
-                () -> assertThat(response.get(0).title()).isEqualTo(post.getPollChoices().get(voteIndex).getTitle()),
-                () -> assertThat(response.get(0).voteCount()).isEqualTo(1),
-                () -> assertThat(response.get(0).voteRatio()).isEqualTo("100.0"),
+                () -> assertThat(response.getFirst().id()).isEqualTo(post.getPollChoices().get(1).getId()),
+                () -> assertThat(response.getFirst().title()).isEqualTo(post.getPollChoices().get(1).getTitle()),
+                () -> assertThat(response.getFirst().voteCount()).isEqualTo(1),
+                () -> assertThat(response.getFirst().voteRatio()).isEqualTo("100.0"),
 
-                () -> assertThat(response.get(1).id()).isEqualTo(post.getPollChoices().get(0).getId()),
-                () -> assertThat(response.get(1).title()).isEqualTo(post.getPollChoices().get(0).getTitle()),
+                () -> assertThat(response.get(1).id()).isEqualTo(post.getPollChoices().getFirst().getId()),
+                () -> assertThat(response.get(1).title()).isEqualTo(post.getPollChoices().getFirst().getTitle()),
                 () -> assertThat(response.get(1).voteCount()).isEqualTo(0),
                 () -> assertThat(response.get(1).voteRatio()).isEqualTo("0.0")
         );
@@ -249,12 +354,12 @@ class VoteServiceTest extends IntegrationTest {
 
     @Test
     @DisplayName("투표 현황 조회 - 투표한 사람인 경우 투표 현황을 조회할 수 있어야 함")
-    void findVoteStatus_voteUser() throws Exception {
+    void findVoteStatus_voteUser() {
         //given
         User author = userRepository.save(UserFixture.createDefaultUser());
         User voter = userRepository.save(UserFixture.createDefaultUser());
         Post post = postRepository.save(PostFixture.createDefaultPost(author.getId()));
-        Vote vote = voteRepository.save(VoteFixture.createDefaultVote(voter.getId(), post.getId(), post.getPollChoices().get(0).getId()));
+        voteRepository.save(VoteFixture.createDefaultVote(voter.getId(), post.getId(), post.getPollChoices().getFirst().getId()));
 
         //when
         var response = voteService.findVoteStatus(voter.getId(), post.getId());
@@ -265,7 +370,7 @@ class VoteServiceTest extends IntegrationTest {
 
     @Test
     @DisplayName("투표 현황 조회 - 작성자 아니고 투표 안 한 사람인 경우")
-    void findVoteStatus_notAuthorAndVoter() throws Exception {
+    void findVoteStatus_notAuthorAndVoter() {
         //given
         User user = userRepository.save(UserFixture.createDefaultUser());
         Post post = postRepository.save(PostFixture.createDefaultPost(user.getId()));
